Hack around css bug where overflow x and y cant be different

--- a/src/styles/row.less
+++ b/src/styles/row.less
@@ -36,7 +36,6 @@
     .row_body {
         padding: 1ex;
         background: lighten(@blue, 60%);
-        overflow-x: auto;
     }
     margin-bottom: 0.3em;
 }
